# codeforge

./: .dockerignore  Dockerfile  README.md  codeforge.db  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/shared/: Card.tsx  SeverityBadge.tsx  StatusBadge.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: AnalysisView.tsx  Dashboard.tsx  PipelineView.tsx  ProjectSettings.tsx
nginx/: nginx-init.conf  nginx.conf
src/codeforge/: __init__.py  __main__.py  app.py  config.py
src/codeforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/codeforge/api/: analysis.py  dashboard.py  pipelines.py  projects.py  router.py  ws.py
src/codeforge/bridge/: codemind_bridge.py  pipeforge_bridge.py
src/codeforge/models/: db.py  schemas.py
src/codeforge/services/: run_manager.py
